# schoolProjects

./: .gitignore  README.md  README_ru.md  pyproject.toml
10th_grade/1st_quarter/: README.md
10th_grade/1st_quarter/notebooks/numpy/: functions.py  functions_vectorised.py  numpy_1_finished.ipynb
10th_grade/1st_quarter/notebooks/pandas/: 1_done.ipynb  2_done.ipynb  3_done.ipynb  4_done.ipynb  5_done.ipynb  6_done.ipynb
10th_grade/1st_quarter/notebooks/visualization/: 03_10_2024_ex.ipynb
10th_grade/1st_quarter/prog/test_v2/: README.md  task1.py  task2.py
10th_grade/1st_quarter/progs/test_v2/: task3.py
10th_grade/1st_quarter/projects/project_1/: README.md  project_1.ipynb  task.md
10th_grade/2nd_quarter/prog/bst_avl_trie/: README.md  avl_dicts.py  avl_sets.py  avl_unit_tests.py  dif_pref_generated_strings.json  generate_strings.py  random_generated_strings.json  same_pref_generated_strings.json  sets.py  trees.py  trie.py  trie_memory_test.py  trie_speed_test.py  trie_unit_tests.py
10th_grade/2nd_quarter/prog/trees/: main.py
10th_grade/2nd_quarter/prog/tsd/: README.md  avl_dicts.py  avl_sets.py  avl_trees.py  dicts.py  sets.py  trees.py  trie.py  unit_tests.py
10th_grade/3rd_quarter/notebooks/progling/: 09.01.2025.md
10th_grade/3rd_quarter/prog/exam_prepatation/: binary_search.py  bubble_sort.py  edit_distance_dp.py  insertion_sort.py  knapsack.py  lcs.py  merge_sort.py  quick_sort.py
11th_grade/1st_quarter/ML/1/: KNN.ipynb  KNN_nikiforov.ipynb  cross_val.py
11th_grade/1st_quarter/ML/2/: LinReg.ipynb  LinReg_nikiforov.ipynb
(+109 files in other folders)
