[tool.poetry]
name = "schoolprojects"
version = "0.1.0"
description = ""
authors = ["leterDieu <leterdieu@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.38"
tabulate = "^0.9.0"
pandas = "^2.2.3"
numpy = "^2.2.3"
pycparser = "^2.23"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
