[tool.poetry]
name = "schoolprojects"
version = "0.1.0"
description = ""
authors = ["leterDieu <leterdieu@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.38"
tabulate = "^0.9.0"
pandas = "^2.2.3"
numpy = "^2.2.3"
pycparser = "^2.23"
scipy = "^1.16.1"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
scikit-learn = "^1.7.2"
nltk = "^3.9.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
